--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html> 
 <head>
- <title>profil saya - [akhmad azri rasydan mustofa]</title>
+ <title>profil saya - [AKHMAD AZRI RASYDAN MUSTOFA]</title>
  <link rel="stylesheet" href="style.CSS">
 </head>
 <body>
       <div classs="kartu profil">
-          <img src="foto-profik.jpg" alt="foto profil saya">
+          <img src="1000032717.jpg" alt="foto profil saya">
           <h1>akhmad azri rasydan mustofa</h1>
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
