--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <h1>akhmad azri rasydan mustofa</h1>
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
-          <a href="...">kunjungi instgram saya</a>
+          <a href="https://www.instagram.com/nkmazryh_/">kunjungi instgram saya</a>
           <button id="sapaButton">sapa saya!</button>
       </div>
   <script src="script.js"></script>
