--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
       <div classs="kartu profil">
-          <img src="foto-profik.jpg" alt="foto profil saya">
+          <img src="1000032717.jpg" alt="GANTENG GA?">
           <h1>akhmad azri rasydan mustofa</h1>
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
