--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
       <div classs="kartu profil">
-          <img src="1000032717.jpg" alt="GANTENG GA?">
+          <img src="1000032717.jpg" alt="foto profil saya">
           <h1>akhmad azri rasydan mustofa</h1>
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
-          <a href="https://www.instagram.com/nkmazryh_/">kunjungi instgram saya</a>
+          <a href="https://www.instagram.com/nkmazryh_/">kunjungi instgram teman saya</a>
           <button id="sapaButton">sapa saya!</button>
       </div>
   <script src="script.js"></script>
