--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
       <div classs="kartu profil">
-          <img src="1000032717.jpg" alt="foto profil saya">
+          <img src="ChatGPT Image 25 Agu 2025, 07.52.02.png" alt="foto profil saya">
           <h1>akhmad azri rasydan mustofa</h1>
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
-          <a href="https://www.instagram.com/nkmazryh_/">kunjungi instgram teman saya</a>
+          <a href="https://www.instagram.com/nkmazryh_/">Kunjungi Instgram Teman Saya</a>
           <button id="sapaButton">sapa saya!</button>
-      </div>
+     </div>
   <script src="script.js"></script>
 </body>
 <html>
