--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
       <div classs="kartu profil">
-          <img src="1000032717.jpg" alt="foto profil saya">
+          <img src="1000032717.png" alt="foto profil saya">
           <h1>akhmad azri rasydan mustofa</h1>
-          <p>seorang santri yang memenangkan olimpiade sit se jawa timur</p>
+          <p>seorang santri yang memenangkan olimpiade sit se jawa timur KEREN KAN GUE!!!</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
           <a href="https://www.instagram.com/nkmazryh_/">Kunjungi Instgram Teman Saya</a>
           <button id="sapaButton">sapa saya!</button>
