--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
       <div classs="kartu profil">
-          <img src="WhatsApp Image 2025-02-17 at 09.35.36.jpeg" alt="foto profil saya">
+          <img src="AZRII GANTENGG.jpg" alt="foto profil saya">
           <h1>akhmad azri rasydan mustofa</h1>
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur KEREN KAN GUE!!!</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
