--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html> 
 <head>
- <title>profil saya - [akhmad azri rasydan mustofa]</title>
- <link rel="stylesheet" href="style.CSS">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profil Saya - Akhmad Azri Rasydan Mustofa</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 </head>
 <body>
-      <div classs="kartu profil">
+      <div class="kartu profil">
           <img src="Gambar WhatsApp 2025-04-19 pukul 10.02.30_bbd48aac.jpg" alt="foto profil saya">
           <h1>akhmad azri rasydan mustofa</h1>
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur KEREN KAN GUE!!!</p>
@@ -15,5 +19,5 @@
      </div>
   <script src="script.js"></script>
 </body>
-<html>
+</html>
           
