--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html> 
 <head>
- <title>profil saya - [akhmad azri rasydan mustofa]</title>
- <link rel="stylesheet" href="style.CSS">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profil Saya - Akhmad Azri Rasydan Mustofa</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 </head>
 <body>
-      <div classs="kartu profil">
-          <img src="1000032717.jpg" alt="foto profil saya">
+      <div class="kartu profil">
+          <img src="Gambar WhatsApp 2025-04-19 pukul 10.02.30_bbd48aac.jpg" alt="foto profil saya">
           <h1>akhmad azri rasydan mustofa</h1>
-          <p>seorang santri yang memenangkan olimpiade sit se jawa timur keren kan gue!!!!</p>
+          <p>seorang santri yang memenangkan olimpiade sit se jawa timur KEREN KAN GUE!!!</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
           <a href="https://www.instagram.com/nkmazryh_/">Kunjungi Instgram Teman Saya</a>
           <button id="sapaButton">sapa saya!</button>
      </div>
   <script src="script.js"></script>
 </body>
-<html>
+</html>
           
