--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <p>seorang santri yang memenangkan olimpiade sit se jawa timur KEREN KAN GUE!!!</p>
           <a href="https://www.instagram.com/zriii12_/">Kunjungi Instragram Saya</a>
           <a href="https://www.instagram.com/nkmazryh_/">Kunjungi Instgram Teman Saya</a>
-          <button id="sapaButton">sapa saya!</button>
+          <button id="sapaButton">selesai</button>
      </div>
   <script src="script.js"></script>
 </body>
